--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: Elim
-Theme URL: http://rthur.me
+Theme URL: http://aegir.rthur.me/fserver
 Description: A HTML Template
 Author: Graeme Arthur
-Author URI: http://rthur.me
+Author: http://rthur.me
 Version: 1.1
 */
 
