added footer_ea region to the theme & added a pad to the bottom logo when its responsive

--- a/css/style.css
+++ b/css/style.css
@@ -2021,6 +2021,7 @@ background: url(../images/arrow_exp_active_a.png) no-repeat right top;
   }
   #logo {
     padding-bottom: 10px;
+    padding-top: 10px
   }
   #nav {
     border:none;
