--- a/css/style.css
+++ b/css/style.css
@@ -939,7 +939,7 @@ background-repeat: no-repeat;
 }
 
 .main-flexslider .slides>li{
-	height:460px;
+	height:auto;
 	color:#fff;
 	/* background-size:100%!important;
 	background-repeat: no-repeat !important;
@@ -950,7 +950,7 @@ background-repeat: no-repeat;
 }
 
 .main-flexslider .slide{
-	padding: 80px 50px;
+	/* padding: 80px 50px; */
 	margin:0 auto;
 	height:auto;
 }
@@ -6660,15 +6660,15 @@ input.numeric-input:focus{
 	
 	
 	.main-flexslider .slide{
-		padding:60px 40px!important;
+		/* padding:60px 40px!important; */
 	}
 	
 	#main_flex_1 .slide{
-		padding:80px 40px!important;
+		/* padding:80px 40px!important; */
 	}
 	
 	#main_flex_3 .slide{
-		padding:70px 40px!important;
+		/* padding:70px 40px!important; */
 	}
 	
 	.banners-inline{
@@ -7191,15 +7191,15 @@ input.numeric-input:focus{
 	/* Main Flexslider */
 	
 	.main-flexslider{
-		height:350px;
+		/* height:350px; */
 	}
 
 	.main-flexslider .slides>li{
-		height:350px;
+		/* height:350px; */
 	}
 
 	.main-flexslider .slide{
-		padding: 40px 30px!important;
+		/* padding: 40px 30px!important; */
 	}
 
 	.main-flexslider h2{
@@ -7676,7 +7676,7 @@ input.numeric-input:focus{
 	}
 
 	.main-flexslider .slide{
-		padding: 30px!important;
+		/* padding: 30px!important; */
 	}
 	
 	#main_flex_1 .slide{
